fix(collapse-button): conditionally render collapse text

--- a/packages/core/src/components/side-menu/side-menu-collapse-button/side-menu-collapse-button.scss
+++ b/packages/core/src/components/side-menu/side-menu-collapse-button/side-menu-collapse-button.scss
@@ -24,6 +24,10 @@
       position: absolute;
       left: 50%;
     }
+
+    ::slotted(*) {
+      background-color: red;
+    }
   }
 }
 
